--- a/views/base.pug
+++ b/views/base.pug
@@ -1,39 +1,26 @@
 doctype html
 html
     head
-        meta(charset='UTF-8')
-        meta(name='viewport" content="width=device-width, initial-scale=1.0')
-        link(rel='stylesheet' href='css/style.css')
-        link(rel='shortcut icon' type='image/png' href='img/favicon.png ')
-        link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
-        title Natours | Exciting tours for adventurous people
-
+        block head
+            meta(charset='UTF-8')
+            meta(name='viewport' content='width=device-width, initial-scale=1.0')
+            link(rel='stylesheet' href='/css/style.css')
+            link(rel='shortcut icon' type='image/png' href='/img/favicon.png')
+            link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
+            title Natours | #{title}
 
     body
-        header.header
-            nav.nav.nav--tours
-                a.nav__el(href='#') All tours
-            .header__logo
-                img(src='img/logo-white.png' alt='Natours logo')
-            nav.nav.nav--user
-                //a.nav__el(href='#') My bookings
-                //a.nav__el(href='#')
-                //    img(src='img/user.jpg' alt='User photo')
-                //    span Laura
-                button.nav__el.nav__el--cta Log in
-                button.nav__el.nav__el--cta Sign up
+        // HEADER
+        include _header
 
-        section.overview
-            h1= tour
+        // CONTENT
+        block content
+            h1 This is a placeholder heading
 
-        footer.footer
-            .footer__logo
-                img(src='img/logo-green.png' alt='Natour logo')
-            ul.footer__nav
-                li
-                    a(href='#') About us
-                    a(href='#') Download Apps
-                    a(href='#') Become a guide
-                    a(href='#') Careers
-                    a(href='#') Contact
-                p.footer__copyright &copy; by Jonas Schmedtmann
+        // FOOTER
+        include _footer
+
+        //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js')
+        //- script(src='/js/mapbox.js')
+        //- script(src='/js/login.js')
+        script(src='/js/bundle.js')
