--- a/views/tour.pug
+++ b/views/tour.pug
@@ -87,6 +87,6 @@ block content
                 p.cta__text= `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
 
                 if user
-                    button.btn.btn--green.span-all-rows#book-tour(data-tour-id=`${tour.id}) Book Tour now!
+                    button.btn.btn--green.span-all-rows#book-tour(data-tour-id=`${tour.id}`) Book Tour now!
                 else
                     a.btn.btn--green.span-all-rows(href='/login') Log in to book tour
