--- a/views/base.pug
+++ b/views/base.pug
@@ -20,8 +20,6 @@ html
         // FOOTER
         include _footer
 
-        //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js')
-        //- script(src='/js/mapbox.js')
-        //- script(src='/js/login.js')
-        script(src='https://js.stripe.com/v3/')
-        script(src='/js/bundle.js')
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.26.1/axios.min.js')
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/js-polyfills/0.1.43/polyfill.min.js')
+        script(src='/js/bundled/index.js' type='module')
